# sentiment_deployment_aks

infra/: .gitignore  acr.tf  aks.tf  db.tf  k8s_config_teams.tf  locals.tf  main.tf  rg.tf  secrets.tf  security.tf  variables.tf
infra/cluster_configure/: bootstrap_aks.sh  grafana.yaml  helmfile.yaml  jaeger.yaml  kiali.yaml
infra/github/: pyproject.toml
infra/github/runner/: main.py
mlapi/: pyproject.toml
mlapi/src/: main.py
mlapi/tests/: test_mlapi.py
