[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["James Winegar <jameswine@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
PyGithub = "^1.58"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
black = "^23.3"
isort = "^5.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "runner.main:runner"
